# conan2_pkg_test

./: .clang-format  .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  conanfile_v1.txt
cmake/: compiler_settings.cmake  conan.cmake  conan_v1.cmake
sources/: CMakeLists.txt  main.cpp
subproject/: .clang-tidy  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py
subproject/cmake/: conan_provider.cmake  conan_v1.cmake  linter.cmake
subproject/includes/API/: API_Provider.hpp
subproject/includes/Utility/: Formatter.hpp
subproject/sources/: CMakeLists.txt
subproject/sources/API/: API_Provider.cpp  CMakeLists.txt
subproject/sources/Utility/: CMakeLists.txt  Formatter.cpp
subproject/sources/example/: CMakeLists.txt  main.cpp
subproject/test_package/: CMakeLists.txt  conanfile.py  example.cpp
